--- a/publico/login.html
+++ b/publico/login.html
@@ -12,11 +12,11 @@
         <form action="#" method="POST">
             <div class="form-group">
                 <label for="useremail">Email:</label>
-                <input type="email" id="useremail" name="useremail" required>
+                <input type="email" id="useremail" name="useremail">
             </div>
             <div class="form-group">
                 <label for="password">Senha:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password">
             </div>
             <button type="submit">Entrar</button>
         </form>
