--- a/publico/cadastroUsuario.html
+++ b/publico/cadastroUsuario.html
@@ -9,7 +9,7 @@
 <body>
     <div class="registration-form">
         <h2>Cadastro</h2>
-        <form action="/cadastroUsuario.html" method="POST">
+        <form action="/cadastroUsuario" method="POST">
             <div class="form-group">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome">
