--- a/protegido/index.html
+++ b/protegido/index.html
@@ -11,8 +11,9 @@
         <ul>
             <li><a href="#inicio">Home</a></li>
             <li><a href="/cadastroUsuario.html">Cadastro</a></li>
-            <li><a href="#services">Mensagens</a></li>
+            <li><a href="/chat.html">Mensagens</a></li>
             <li><a href="/login.html">Login</a></li>
+            <li><a href="/logout">Sair</a></li>
         </ul>
     </nav>
 </body>
