--- a/publico/login.html
+++ b/publico/login.html
@@ -9,18 +9,17 @@
 <body>
     <div class="login-form">
         <h2>Login</h2>
-        <form action="#" method="POST">
+        <form action="/login" method="POST">
             <div class="form-group">
-                <label for="useremail">Email:</label>
-                <input type="email" id="useremail" name="useremail">
+                <label for="usuario">Usuário:</label>
+                <input type="text" id="usuario" name="usuario">
             </div>
             <div class="form-group">
-                <label for="password">Senha:</label>
-                <input type="password" id="password" name="password">
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" name="senha">
             </div>
             <button type="submit">Entrar</button>
         </form>
-        <button class="back-button" onclick="window.location.href='index.html'">Voltar</button>
     </div>
 </body>
 </html>
